# PacManBot_ROS2

./: README.md
pacmanbot_package/: package.xml  setup.cfg  setup.py
pacmanbot_package/launch/: game_state_demo.launch.py  nav2_custom.yaml  pacman_game_nodes.launch.py  pacman_localization.launch.py  pacman_nav2.launch.py  pacman_start_localization.launch.py
pacmanbot_package/maps/: map_01.yaml  map_01_clean.pgm  map_helper.py  map_name.pgm  map_preprocessor.py
pacmanbot_package/pacmanbot_analysis/: amcl_logger.py  clyde_velocity_logger.py  pose_estimate_analysis.py  trajectory_analysis.py
pacmanbot_package/pacmanbot_analysis/data/: amcl_pose_trial.csv  amcl_t1.csv  amcl_t2.csv  amcl_t3.csv  amcl_t4.csv
pacmanbot_package/pacmanbot_package/: audio_library.py  audio_node.py  clyde_ghost_node.py  game_audio_node.py  game_controller.py  game_event_mapper.py  game_light.py  game_light_node.py  game_state_demo_gui.py  pellet_manager.py  planner_stub.py  wait_for_amcl_pose.py
pacmanbot_package/pacmanbot_package/maps/: map_name.yaml
pacmanbot_package/rviz2/: PacManBot.rviz
pacmanbot_planning/: package.xml  setup.cfg  setup.py
pacmanbot_planning/pacmanbot_planning/: audio_node.py  planner_stub.py
pacmanbot_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
pacmanbot_rviz_plugins/include/pacmanbot_rviz_plugins/: game_control_panel.hpp
pacmanbot_rviz_plugins/src/: game_control_panel.cpp
