<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pacmanbot_rviz_plugins</name>
  <version>0.0.0</version>
  <description>RViz plugins for PacManBot game control.</description>
  <maintainer email="eva@todo.todo">eva</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins_description.xml"/>
  </export>
</package>
